fix long company name overflowing header bar

--- a/client/frontend/src/themes/default/components/topbar.scss
+++ b/client/frontend/src/themes/default/components/topbar.scss
@@ -18,6 +18,9 @@
     font-size: 36px;
     font-weight: 900;
     color: var(--text-primary);
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
   .name[data-name="PufferPanel"] {
     height: 32px;
